Fix empty gap at the bottom on screens with 16:10 aspect ratio

--- a/about_us_page/about_us.css
+++ b/about_us_page/about_us.css
@@ -7,6 +7,7 @@ main {
     background-size: cover;
     padding-top: 8.1vh;
     padding-bottom: 27.43vh;
+    height: 56.4vh;
 }
 
 .navbar {
